refactor: racingCars 모델 클래스 생성 및 메소드 분리